image-url-repair

--- a/wiki/layout.html
+++ b/wiki/layout.html
@@ -14,7 +14,7 @@
   {% include 'menu.html' %}
 
   <!-- Header -->
-  <header class="bg-hero py-5 mb-5" style="background-image:{% block backgroundImage %}{% endblock %}">
+  <header class="bg-hero py-5 mb-5" style="background-image:url('{% block backgroundImage %}{% endblock %}')">
     <div class="blur-layer">
       <div class="container h-100">
         <div class="row h-100 align-items-center">
