--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
   
 {% block title %}Education{% endblock %}
-{% block backgroundImage %}url(../static/education/image1.webp){% endblock %}
+{% block backgroundImage %}{{ url_for('static', filename = 'education/image1.webp') }}{% endblock %}
 
 {% block lead %}{% endblock %}
 
