--- a/wiki/pages/sustainable.html
+++ b/wiki/pages/sustainable.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
   
 {% block title %}Sustainability{% endblock %}
-{% block backgroundImage %}url(../static/sustainability/image1.webp){% endblock %}
+{% block backgroundImage %}{{ url_for('static', filename = 'sustainability/image1.webp') }}{% endblock %}
 
 {% block lead %}{% endblock %}
 
