deploy: c6ed66a9105a6d6b1e0cbc0c89c4762be436de98

--- a/parts.html
+++ b/parts.html
@@ -88,7 +88,7 @@
 </nav>
 
   <!-- Header -->
-  <header class="bg-hero py-5 mb-5" style="background-image:url(../static/parts/image1.webp)">
+  <header class="bg-hero py-5 mb-5" style="background-image:url('static/parts/image1.webp')">
     <div class="blur-layer">
       <div class="container h-100">
         <div class="row h-100 align-items-center">
