members-adn-report

--- a/wiki/menu.html
+++ b/wiki/menu.html
@@ -25,6 +25,7 @@
             <li><a class="dropdown-item" href="{{ url_for('pages', page='description') }}">Description</a></li>
             <li><a class="dropdown-item" href="{{ url_for('pages', page='contribution') }}">Contribution</a></li>
             <li><a class="dropdown-item" href="{{ url_for('pages', page='parts') }}">Parts</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('pages', page='report') }}">Report</a></li>
           </ul>
         </li>
 
