--- a/notebook.html
+++ b/notebook.html
@@ -38,6 +38,7 @@
             <li><a class="dropdown-item" href="description.html">Description</a></li>
             <li><a class="dropdown-item" href="contribution.html">Contribution</a></li>
             <li><a class="dropdown-item" href="parts.html">Parts</a></li>
+            <li><a class="dropdown-item" href="report.html">Report</a></li>
           </ul>
         </li>
 
