--- a/wiki/pages/report.html
+++ b/wiki/pages/report.html
@@ -88,7 +88,7 @@
                 <td></td>
                 <td></td>
             </tr>
-            <tr>
+            <tr class="table-active">
                 <td></td>
                 <td></td>
                 <td></td>
@@ -124,7 +124,7 @@
                 <td>11.901</td>
                 <td>11.414</td>
             </tr>
-            <tr>
+            <tr class="table-active">
                 <td></td>
                 <td></td>
                 <td></td>
@@ -160,7 +160,7 @@
                 <td>5.593</td>
                 <td>5.211</td>
             </tr>
-            <tr>
+            <tr class="table-active">
                 <td></td>
                 <td></td>
                 <td></td>
@@ -196,7 +196,7 @@
                 <td>4.306</td>
                 <td>3.929</td>
             </tr>
-            <tr>
+            <tr class="table-active">
                 <td></td>
                 <td></td>
                 <td></td>
@@ -280,7 +280,7 @@
                 <td>11.90134</td>
                 <td>11.414456</td>
             </tr>
-            <tr>
+            <tr class="table-active">
                 <td></td>
                 <td></td>
                 <td></td>
@@ -364,7 +364,7 @@
                 <td>5.593047</td>
                 <td>5.211234</td>
             </tr>
-            <tr>
+            <tr class="table-active">
                 <td></td>
                 <td></td>
                 <td></td>
@@ -448,7 +448,7 @@
                 <td>4.255041</td>
                 <td>3.811868</td>
             </tr>
-            <tr>
+            <tr class="table-active">
                 <td></td>
                 <td></td>
                 <td></td>
@@ -532,7 +532,7 @@
                 <td>4.001</td>
                 <td>3.786</td>
             </tr>
-            <tr>
+            <tr class="table-active">
                 <td></td>
                 <td></td>
                 <td></td>
