deploy: 23b4f2847fe475b5150361bf92aa0c803ca00404

--- a/report.html
+++ b/report.html
@@ -196,7 +196,7 @@
                 <td></td>
                 <td></td>
             </tr>
-            <tr>
+            <tr class="table-active">
                 <td></td>
                 <td></td>
                 <td></td>
@@ -232,7 +232,7 @@
                 <td>11.901</td>
                 <td>11.414</td>
             </tr>
-            <tr>
+            <tr class="table-active">
                 <td></td>
                 <td></td>
                 <td></td>
@@ -268,7 +268,7 @@
                 <td>5.593</td>
                 <td>5.211</td>
             </tr>
-            <tr>
+            <tr class="table-active">
                 <td></td>
                 <td></td>
                 <td></td>
@@ -304,7 +304,7 @@
                 <td>4.306</td>
                 <td>3.929</td>
             </tr>
-            <tr>
+            <tr class="table-active">
                 <td></td>
                 <td></td>
                 <td></td>
@@ -388,7 +388,7 @@
                 <td>11.90134</td>
                 <td>11.414456</td>
             </tr>
-            <tr>
+            <tr class="table-active">
                 <td></td>
                 <td></td>
                 <td></td>
@@ -472,7 +472,7 @@
                 <td>5.593047</td>
                 <td>5.211234</td>
             </tr>
-            <tr>
+            <tr class="table-active">
                 <td></td>
                 <td></td>
                 <td></td>
@@ -556,7 +556,7 @@
                 <td>4.255041</td>
                 <td>3.811868</td>
             </tr>
-            <tr>
+            <tr class="table-active">
                 <td></td>
                 <td></td>
                 <td></td>
@@ -640,7 +640,7 @@
                 <td>4.001</td>
                 <td>3.786</td>
             </tr>
-            <tr>
+            <tr class="table-active">
                 <td></td>
                 <td></td>
                 <td></td>
